--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -21,7 +21,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
 
           # Options
-          user: ernado
+          user: AlienegraGeek
           template: classic
           base: header, activity, community, repositories, metadata
 
