--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -31,10 +31,10 @@ jobs:
 
           plugin_languages: yes
           plugin_languages_analysis_timeout: 30
-          plugin_languages_categories: data, markup, programming
+#          plugin_languages_categories: markup, programming
           plugin_languages_colors: github
           plugin_languages_limit: 8
-          plugin_languages_recent_categories: data, markup, programming, prose
+#          plugin_languages_recent_categories: data, markup, programming, prose
           plugin_languages_recent_days: 60
           plugin_languages_recent_load: 500
           plugin_languages_sections: most-used
