--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -7,6 +7,11 @@ on:
   # Line below let you run workflow manually
   workflow_dispatch:
 
+  # run on every push on the master branch
+  push:
+    branches:
+      - main
+
 jobs:
   generate-metrics:
     runs-on: ubuntu-latest
@@ -31,6 +36,7 @@ jobs:
 
           plugin_languages: yes
           plugin_languages_analysis_timeout: 30
+          plugin_languages_details: percentage, lines
 #          plugin_languages_categories: markup, programming
           plugin_languages_colors: github
           plugin_languages_limit: 8
@@ -39,5 +45,8 @@ jobs:
           plugin_languages_recent_load: 500
           plugin_languages_sections: most-used
           plugin_languages_other: yes
+
+          plugin_isocalendar: yes
+          plugin_isocalendar_duration: half-year
 
           plugin_lines: yes
