--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -34,19 +34,19 @@ jobs:
 
           config_display: large
 
-          plugin_languages: yes
-          plugin_languages_analysis_timeout: 30
-          plugin_languages_details: percentage, lines
+#          plugin_languages: yes
+#          plugin_languages_analysis_timeout: 30
+#          plugin_languages_details: percentage, lines
 #          plugin_languages_categories: markup, programming
-          plugin_languages_colors: github
-          plugin_languages_limit: 8
+#          plugin_languages_colors: github
+#          plugin_languages_limit: 8
 #          plugin_languages_recent_categories: data, markup, programming, prose
-          plugin_languages_recent_days: 60
-          plugin_languages_recent_load: 500
-          plugin_languages_sections: most-used
-          plugin_languages_other: yes
+#          plugin_languages_recent_days: 60
+#          plugin_languages_recent_load: 500
+#          plugin_languages_sections: most-used
+#          plugin_languages_other: yes
 
           plugin_isocalendar: yes
-          plugin_isocalendar_duration: half-year
+          plugin_isocalendar_duration: full-year
 
           plugin_lines: yes
