--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -34,7 +34,7 @@ jobs:
 
           config_display: large
 
-#          plugin_languages: yes
+          plugin_languages: no
 #          plugin_languages_analysis_timeout: 30
 #          plugin_languages_details: percentage, lines
 #          plugin_languages_categories: markup, programming
@@ -47,6 +47,6 @@ jobs:
 #          plugin_languages_other: yes
 
           plugin_isocalendar: yes
-          plugin_isocalendar_duration: full-year
+          plugin_isocalendar_duration: half-year
 
           plugin_lines: yes
