--- a/.github/workflows/stats_cards.yml
+++ b/.github/workflows/stats_cards.yml
@@ -1,57 +1,43 @@
-name: Update README cards
-
+name: Stats Cards
 on:
   schedule:
     - cron: "0 0 * * *"
   workflow_dispatch:
 
-permissions:
-  contents: write
-
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v4
 
       - name: Generate stats card
-        uses: AlienegraGeek/github-readme-stats-fast-action@v1
+        uses: readme-tools/github-readme-stats-action@v1
         with:
           card: stats
-          options: username=${{ github.repository_owner }}
+          options: username=${{ github.repository_owner }}&show_icons=true
           path: profile/stats.svg
           token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Generate streak card
-        uses: AlienegraGeek/github-readme-stats-fast-action@v1
-        with:
-          card: streak
-          options: username=${{ github.repository_owner }}
-          path: profile/streak.svg
-          token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Generate Top Languages card
-        uses: AlienegraGeek/github-readme-stats-fast-action@v1
+      - name: Generate top languages card
+        uses: readme-tools/github-readme-stats-action@v1
         with:
           card: top-langs
-          options: username=${{ github.repository_owner }}
+          options: username=${{ github.repository_owner }}&layout=compact&langs_count=6
           path: profile/top-langs.svg
           token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Generate Wakatime card
-        uses: AlienegraGeek/github-readme-stats-fast-action@v1
+      - name: Generate pin card
+        uses: readme-tools/github-readme-stats-action@v1
         with:
-          card: wakatime
-          options: username=praneshjs
-          path: profile/wakatime.svg
+          card: pin
+          options: username=readme-tools&repo=github-readme-stats
+          path: profile/pin-readme-tools-github-readme-stats.svg
           token: ${{ secrets.GITHUB_TOKEN }}
-      
 
       - name: Commit cards
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@users.noreply.github.com"
           git add profile/*.svg
-          git commit -m "Update README cards" || echo "No changes to commit"
-          git push origin HEAD
+          git commit -m "Update README cards" || exit 0
+          git push
