--- a/.github/workflows/stats_cards.yml
+++ b/.github/workflows/stats_cards.yml
@@ -1,4 +1,4 @@
-name: Stats Cards
+name: Stats cards
 on:
   schedule:
     - cron: "0 0 * * *"
@@ -14,7 +14,7 @@ jobs:
         uses: readme-tools/github-readme-stats-action@v1
         with:
           card: stats
-          options: username=${{ github.repository_owner }}&show_icons=true
+          options: username=${{ github.repository_owner }}&show_icons=true&count_private=true&show_owner=true&&bg_color=0d1117
           path: profile/stats.svg
           token: ${{ secrets.GITHUB_TOKEN }}
 
@@ -22,7 +22,7 @@ jobs:
         uses: readme-tools/github-readme-stats-action@v1
         with:
           card: top-langs
-          options: username=${{ github.repository_owner }}&layout=compact&langs_count=6
+          options: username=${{ github.repository_owner }}&layout=compact&langs_count=10&count_private=true&card_width=450&&bg_color=0d1117
           path: profile/top-langs.svg
           token: ${{ secrets.GITHUB_TOKEN }}
 
